// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Toggle Field renders 1`] = `
<FormGroup
  bsClass="form-group"
  controlId="fieldName"
>
  <Label
    label="CheckBox  Test"
    required={false}
  />
  <InputGroup
    bsClass="input-group"
  >
    <Toggle
      checked={false}
      disabled={false}
      icons={
        Object {
          "checked": <Unknown />,
          "unchecked": <Unknown />,
        }
      }
      name="fieldName"
      onBlur={[MockFunction]}
      onChange={[Function]}
      onFocus={[MockFunction]}
    />
  </InputGroup>
  <HelpBlock
    bsClass="help-block"
    style={
      Object {
        "minHeight": "3ex",
      }
    }
  />
</FormGroup>
`;

exports[`The Toggle Field renders the help message with a break 1`] = `
<FormGroup
  bsClass="form-group"
  controlId="fieldName"
  validationState={null}
>
  <Label
    label="CheckBox  Test"
    required={false}
  />
  <InputGroup
    bsClass="input-group"
  >
    <Toggle
      checked={false}
      disabled={false}
      helpTextStyle={
        Object {
          "fontWeight": "bold",
        }
      }
      icons={
        Object {
          "checked": <Unknown />,
          "unchecked": <Unknown />,
        }
      }
      name="fieldName"
      onBlur={[MockFunction]}
      onChange={[Function]}
      onFocus={[MockFunction]}
    />
  </InputGroup>
  <HelpBlock
    bsClass="help-block"
    style={
      Object {
        "fontWeight": "bold",
      }
    }
  >
    There was an error
    <br />
    The help Text
  </HelpBlock>
</FormGroup>
`;
